objects/Grant__c.object
<CustomObject>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Grants</relationshipLabel>
        <relationshipName>Grants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FinancialSelfSufficiency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Self Sufficiency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancingType__c</fullName>
        <label>Financing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First grant</fullName>
                </value>
                <value>
                    <fullName>All other grants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forgiveable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forgiveable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FundingAmount__c</fullName>
        <label>Funding Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FundingSource__c</fullName>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FundingType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Government (Federal/State/Local)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other Government</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                    <isActive>false</isActive>
                    <label>Bank of America</label>
                </value>
                <value>
                    <fullName>CDBG</fullName>
                    <isActive>false</isActive>
                    <label>CDBG</label>
                </value>
                <value>
                    <fullName>Chase</fullName>
                    <isActive>false</isActive>
                    <label>Chase</label>
                </value>
                <value>
                    <fullName>CitiMortgage Inc</fullName>
                    <isActive>false</isActive>
                    <label>CitiMortgage Inc</label>
                </value>
                <value>
                    <fullName>Credit Union</fullName>
                    <isActive>false</isActive>
                    <label>Credit Union</label>
                </value>
                <value>
                    <fullName>DOE (WAP) Weatherization Funds</fullName>
                    <isActive>false</isActive>
                    <label>DOE (WAP) Weatherization Funds</label>
                </value>
                <value>
                    <fullName>Flagstar Bancorp</fullName>
                    <isActive>false</isActive>
                    <label>Flagstar Bancorp</label>
                </value>
                <value>
                    <fullName>Flagstar Bank FSB</fullName>
                    <isActive>false</isActive>
                    <label>Flagstar Bank FSB</label>
                </value>
                <value>
                    <fullName>Funded with a lender participation pool that NWO administers</fullName>
                    <isActive>false</isActive>
                    <label>Funded with a lender participation pool that NWO administers</label>
                </value>
                <value>
                    <fullName>HOME Funds</fullName>
                    <isActive>false</isActive>
                    <label>HOME Funds</label>
                </value>
                <value>
                    <fullName>HUD-Guaranteed Section 184 Native American Mortgage</fullName>
                    <isActive>false</isActive>
                    <label>HUD-Guaranteed Section 184 Native American Mortgage</label>
                </value>
                <value>
                    <fullName>MetLife Home Loans</fullName>
                    <isActive>false</isActive>
                    <label>MetLife Home Loans</label>
                </value>
                <value>
                    <fullName>Other Private Lending Institution</fullName>
                    <isActive>false</isActive>
                    <label>Other Private Lending Institution</label>
                </value>
                <value>
                    <fullName>Other RLF</fullName>
                    <isActive>false</isActive>
                    <label>Other RLF</label>
                </value>
                <value>
                    <fullName>Other not listed above</fullName>
                    <isActive>false</isActive>
                    <label>Other not listed above</label>
                </value>
                <value>
                    <fullName>PHH Corp</fullName>
                    <isActive>false</isActive>
                    <label>PHH Corp</label>
                </value>
                <value>
                    <fullName>PennyMac Mortgage Investment Trust</fullName>
                    <isActive>false</isActive>
                    <label>PennyMac Mortgage Investment Trust</label>
                </value>
                <value>
                    <fullName>Project Reinvest Homeownership</fullName>
                    <isActive>false</isActive>
                    <label>Project Reinvest Homeownership</label>
                </value>
                <value>
                    <fullName>Provident Funding Associates</fullName>
                    <isActive>false</isActive>
                    <label>Provident Funding Associates</label>
                </value>
                <value>
                    <fullName>Quicken</fullName>
                    <isActive>false</isActive>
                    <label>Quicken</label>
                </value>
                <value>
                    <fullName>Re-Loaned Wells LIFT</fullName>
                    <isActive>false</isActive>
                    <label>Re-Loaned Wells LIFT</label>
                </value>
                <value>
                    <fullName>ResCap (GMAC)</fullName>
                    <isActive>false</isActive>
                    <label>ResCap (GMAC)</label>
                </value>
                <value>
                    <fullName>SunTrust Mortgage Inc</fullName>
                    <isActive>false</isActive>
                    <label>SunTrust Mortgage Inc</label>
                </value>
                <value>
                    <fullName>U.S. Bank Home Mortgage</fullName>
                    <isActive>false</isActive>
                    <label>U.S. Bank Home Mortgage</label>
                </value>
                <value>
                    <fullName>USDA RD 502D</fullName>
                    <isActive>false</isActive>
                    <label>USDA RD 502D</label>
                </value>
                <value>
                    <fullName>USDA RD 502G</fullName>
                    <isActive>false</isActive>
                    <label>USDA RD 502G</label>
                </value>
                <value>
                    <fullName>USDA RD Rehab (504 or HPG)</fullName>
                    <isActive>false</isActive>
                    <label>USDA RD Rehab (504 or HPG)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingType__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CDBG</fullName>
                </value>
                <value>
                    <fullName>Client Sweat Equity</fullName>
                </value>
                <value>
                    <fullName>DOE (WAP) Weatherization Funds</fullName>
                </value>
                <value>
                    <fullName>HFA</fullName>
                </value>
                <value>
                    <fullName>Non NWO CDFI</fullName>
                </value>
                <value>
                    <fullName>NWOs other funds</fullName>
                </value>
                <value>
                    <fullName>Other sources (e.g. FHLB/AHP/Corporations/Foundations/NWA/NCC)</fullName>
                </value>
                <value>
                    <fullName>City Government</fullName>
                    <isActive>false</isActive>
                    <label>City Government</label>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                    <isActive>false</isActive>
                    <label>Corporation</label>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                    <isActive>false</isActive>
                    <label>Federal Government</label>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                    <isActive>false</isActive>
                    <label>Foundation</label>
                </value>
                <value>
                    <fullName>Gift of Equity</fullName>
                    <isActive>false</isActive>
                    <label>Gift of Equity</label>
                </value>
                <value>
                    <fullName>NCC</fullName>
                    <isActive>false</isActive>
                    <label>NCC</label>
                </value>
                <value>
                    <fullName>NWO Loan Funds</fullName>
                    <isActive>false</isActive>
                    <label>NWO Loan Funds</label>
                </value>
                <value>
                    <fullName>NWO Other</fullName>
                    <isActive>false</isActive>
                    <label>NWO Other</label>
                </value>
                <value>
                    <fullName>NeighborWorks America</fullName>
                    <isActive>false</isActive>
                    <label>NeighborWorks America</label>
                </value>
                <value>
                    <fullName>Other Source</fullName>
                    <isActive>false</isActive>
                    <label>Other Source</label>
                </value>
                <value>
                    <fullName>Private Lending Institution</fullName>
                    <isActive>false</isActive>
                    <label>Private Lending Institution</label>
                </value>
                <value>
                    <fullName>State or County Government</fullName>
                    <isActive>false</isActive>
                    <label>State or County Government</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrantType__c</fullName>
        <label>Grant Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FundingType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Government (Federal/State/Local)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other Government</fullName>
                </value>
                <value>
                    <fullName>CDBG - Gov</fullName>
                    <isActive>false</isActive>
                    <label>CDBG - Gov</label>
                </value>
                <value>
                    <fullName>DOE (WAP) weatherization Funds</fullName>
                    <isActive>false</isActive>
                    <label>DOE (WAP) weatherization Funds</label>
                </value>
                <value>
                    <fullName>Linked to NWO&apos;s Other Funds</fullName>
                    <isActive>false</isActive>
                    <label>Linked to NWO&apos;s Other Funds</label>
                </value>
                <value>
                    <fullName>Not Applicable [linked to Client Sweat Equity]</fullName>
                    <isActive>false</isActive>
                    <label>Not Applicable [linked to Client Sweat Equity]</label>
                </value>
                <value>
                    <fullName>Not Applicable [linked to HFA]</fullName>
                    <isActive>false</isActive>
                    <label>Not Applicable [linked to HFA]</label>
                </value>
                <value>
                    <fullName>Not Applicable [linked to Non NWO CDFI]</fullName>
                    <isActive>false</isActive>
                    <label>Not Applicable [linked to Non NWO CDFI]</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>SPCP (Special Purpose Credit Program)</fullName>
                    <isActive>false</isActive>
                    <label>SPCP (Special Purpose Credit Program)</label>
                </value>
                <value>
                    <fullName>{Other not listed above}</fullName>
                    <isActive>false</isActive>
                    <label>{Other not listed above}</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grantor__c</fullName>
        <label>Grantor</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LessCosts__c</fullName>
        <label>Less Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>StatusType__c</fullName>
        <label>Status Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeatherizationFunds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weatherization Funds</label>
        <type>Checkbox</type>
    </fields>
    <label>Grant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ClientCase__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G- {YYYY}/{MM} - {0000}</displayFormat>
        <label>Grant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>